--- a/euajudo/Base.lproj/Main.storyboard
+++ b/euajudo/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ZHZ-a3-SPd">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ZHZ-a3-SPd">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
     </dependencies>
@@ -8,15 +8,54 @@
         <scene sceneID="cQY-UA-qob">
             <objects>
                 <tableViewController id="Bkk-SJ-AoE" customClass="CampaignsTableViewController" customModule="euajudo" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="tYR-8K-PFs">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="108" sectionHeaderHeight="22" sectionFooterHeight="22" id="tYR-8K-PFs">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="fmw-FP-NNB">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="campaignCell" rowHeight="108" id="fmw-FP-NNB">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="fmw-FP-NNB" id="UdO-TL-ias">
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" tag="100" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Fzl-ST-XsG">
+                                            <rect key="frame" x="15" y="15" width="76" height="76"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="76" id="82O-qm-Sm6"/>
+                                                <constraint firstAttribute="height" constant="76" id="U10-rI-baI"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" tag="200" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nome" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kA4-Hx-mcp">
+                                            <rect key="frame" x="101" y="15" width="484" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="Uam-sk-Fnf"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" tag="300" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Descrição" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yCA-zd-Upx">
+                                            <rect key="frame" x="101" y="44" width="484" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="rzc-jZ-GYi"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="yCA-zd-Upx" firstAttribute="leading" secondItem="Fzl-ST-XsG" secondAttribute="trailing" constant="10" id="1Yc-jD-W7K"/>
+                                        <constraint firstItem="yCA-zd-Upx" firstAttribute="top" secondItem="kA4-Hx-mcp" secondAttribute="bottom" constant="8" id="3ZK-3J-w59"/>
+                                        <constraint firstItem="Fzl-ST-XsG" firstAttribute="leading" secondItem="UdO-TL-ias" secondAttribute="leading" constant="15" id="5fF-ft-uFf"/>
+                                        <constraint firstItem="kA4-Hx-mcp" firstAttribute="leading" secondItem="Fzl-ST-XsG" secondAttribute="trailing" constant="10" id="5tK-EE-qsW"/>
+                                        <constraint firstAttribute="trailing" secondItem="kA4-Hx-mcp" secondAttribute="trailing" constant="15" id="NSl-Rg-d7W"/>
+                                        <constraint firstAttribute="bottom" secondItem="yCA-zd-Upx" secondAttribute="bottom" constant="42" id="Tz6-5b-gOf"/>
+                                        <constraint firstAttribute="bottom" secondItem="Fzl-ST-XsG" secondAttribute="bottom" constant="16" id="bYU-An-H0l"/>
+                                        <constraint firstItem="kA4-Hx-mcp" firstAttribute="top" secondItem="UdO-TL-ias" secondAttribute="top" constant="15" id="ew2-dd-3Ot"/>
+                                        <constraint firstAttribute="trailing" secondItem="yCA-zd-Upx" secondAttribute="trailing" constant="15" id="mR1-OP-hfx"/>
+                                        <constraint firstItem="Fzl-ST-XsG" firstAttribute="top" secondItem="UdO-TL-ias" secondAttribute="top" constant="15" id="qdG-Um-KOI"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
