--- a/euajudo/Base.lproj/Main.storyboard
+++ b/euajudo/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ZHZ-a3-SPd">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ZHZ-a3-SPd">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -80,7 +80,7 @@
         <!--Campaign Detail View Controller-->
         <scene sceneID="iVs-Am-pB6">
             <objects>
-                <viewController id="564-cH-uAu" customClass="CampaignDetailViewController" customModule="euajudo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="564-cH-uAu" customClass="CampaignDetailViewController" customModule="euajudo" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="65O-Mi-gsM"/>
                         <viewControllerLayoutGuide type="bottom" id="Cuu-56-Bft"/>
@@ -90,66 +90,78 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dnf-IE-ohD">
-                                <rect key="frame" x="0.0" y="66" width="600" height="534"/>
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Empresa responsável" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9eV-LI-DyD">
-                                        <rect key="frame" x="19" y="37" width="562" height="21"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fja-XK-Ouk" userLabel="Content View">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="449"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Título do projeto" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VHv-l6-cKD">
+                                                <rect key="frame" x="18" y="15" width="564" height="21"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="hId-XY-MSr"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Empresa responsável" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9eV-LI-DyD">
+                                                <rect key="frame" x="18" y="36" width="564" height="21"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="Se5-3I-vve"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                                                <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Miyagi" translatesAutoresizingMaskIntoConstraints="NO" id="mWL-7Q-1as">
+                                                <rect key="frame" x="0.0" y="75" width="600" height="320"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="mWL-7Q-1as" secondAttribute="height" multiplier="15:8" id="P97-vb-ALA"/>
+                                                </constraints>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dKk-iJ-zif">
+                                                <rect key="frame" x="18" y="408" width="564" height="21"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="Anp-kc-T4z"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="41Q-9c-Ghe"/>
+                                            <constraint firstAttribute="bottom" secondItem="dKk-iJ-zif" secondAttribute="bottom" constant="20" id="8LN-Ie-p1V"/>
+                                            <constraint firstItem="mWL-7Q-1as" firstAttribute="top" secondItem="9eV-LI-DyD" secondAttribute="bottom" constant="18" id="A5C-0S-hhC"/>
+                                            <constraint firstAttribute="trailing" secondItem="mWL-7Q-1as" secondAttribute="trailing" id="Iv9-xK-Cue"/>
+                                            <constraint firstAttribute="trailing" secondItem="9eV-LI-DyD" secondAttribute="trailing" constant="18" id="JsW-CH-Ist"/>
+                                            <constraint firstItem="dKk-iJ-zif" firstAttribute="top" secondItem="mWL-7Q-1as" secondAttribute="bottom" constant="13" id="K15-dJ-GP6"/>
+                                            <constraint firstAttribute="trailing" secondItem="dKk-iJ-zif" secondAttribute="trailing" constant="18" id="Mfu-BU-IxZ"/>
+                                            <constraint firstItem="9eV-LI-DyD" firstAttribute="leading" secondItem="fja-XK-Ouk" secondAttribute="leading" constant="18" id="Pbb-Qs-1MK"/>
+                                            <constraint firstItem="dKk-iJ-zif" firstAttribute="leading" secondItem="fja-XK-Ouk" secondAttribute="leading" constant="18" id="Zom-Oz-EXq"/>
+                                            <constraint firstItem="9eV-LI-DyD" firstAttribute="top" secondItem="VHv-l6-cKD" secondAttribute="bottom" id="cOP-J0-XvB"/>
+                                            <constraint firstItem="VHv-l6-cKD" firstAttribute="top" secondItem="fja-XK-Ouk" secondAttribute="top" constant="15" id="eRq-GV-XJD"/>
+                                            <constraint firstItem="mWL-7Q-1as" firstAttribute="leading" secondItem="fja-XK-Ouk" secondAttribute="leading" id="knN-pn-P8J"/>
+                                            <constraint firstItem="VHv-l6-cKD" firstAttribute="leading" secondItem="fja-XK-Ouk" secondAttribute="leading" constant="18" id="vZH-JN-zx3"/>
+                                            <constraint firstAttribute="trailing" secondItem="VHv-l6-cKD" secondAttribute="trailing" constant="18" id="xg8-zw-r5s"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
-                                        <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Miyagi" translatesAutoresizingMaskIntoConstraints="NO" id="mWL-7Q-1as">
-                                        <rect key="frame" x="0.0" y="66" width="600" height="400"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="400" id="Hs9-Mb-Rad"/>
-                                            <constraint firstAttribute="width" secondItem="mWL-7Q-1as" secondAttribute="height" multiplier="3:2" id="PCP-ew-ql0"/>
-                                        </constraints>
-                                    </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dKk-iJ-zif">
-                                        <rect key="frame" x="19" y="479" width="562" height="21"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="a7F-Sw-790"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
-                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Título do projeto" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VHv-l6-cKD">
-                                        <rect key="frame" x="19" y="15" width="562" height="21"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="9SK-Xy-9Wc"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
-                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                    </view>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="VHv-l6-cKD" secondAttribute="trailing" constant="19" id="9Q9-cW-5qu"/>
-                                    <constraint firstAttribute="trailing" secondItem="dKk-iJ-zif" secondAttribute="trailing" constant="19" id="Exw-AJ-hji"/>
-                                    <constraint firstAttribute="trailing" secondItem="9eV-LI-DyD" secondAttribute="trailing" constant="19" id="H6D-FG-BIL"/>
-                                    <constraint firstItem="VHv-l6-cKD" firstAttribute="top" secondItem="Dnf-IE-ohD" secondAttribute="top" constant="15" id="KY5-JN-R9D"/>
-                                    <constraint firstAttribute="trailing" secondItem="mWL-7Q-1as" secondAttribute="trailing" id="RqY-Cv-a4E"/>
-                                    <constraint firstItem="dKk-iJ-zif" firstAttribute="leading" secondItem="Dnf-IE-ohD" secondAttribute="leading" constant="19" id="Tc9-TL-HM2"/>
-                                    <constraint firstItem="mWL-7Q-1as" firstAttribute="top" secondItem="9eV-LI-DyD" secondAttribute="bottom" constant="8" id="aax-NJ-38J"/>
-                                    <constraint firstItem="VHv-l6-cKD" firstAttribute="leading" secondItem="Dnf-IE-ohD" secondAttribute="leading" constant="19" id="eLB-dP-A8L"/>
-                                    <constraint firstItem="9eV-LI-DyD" firstAttribute="top" secondItem="VHv-l6-cKD" secondAttribute="bottom" constant="1" id="ei4-co-Gk9"/>
-                                    <constraint firstItem="mWL-7Q-1as" firstAttribute="leading" secondItem="Dnf-IE-ohD" secondAttribute="leading" id="juu-Ua-2wX"/>
-                                    <constraint firstItem="dKk-iJ-zif" firstAttribute="top" secondItem="mWL-7Q-1as" secondAttribute="bottom" constant="13" id="lw8-2b-HgV"/>
-                                    <constraint firstItem="9eV-LI-DyD" firstAttribute="leading" secondItem="Dnf-IE-ohD" secondAttribute="leading" constant="19" id="p8s-Wa-anA"/>
-                                    <constraint firstAttribute="bottom" secondItem="dKk-iJ-zif" secondAttribute="bottom" constant="32" id="twO-WW-7ea"/>
+                                    <constraint firstItem="fja-XK-Ouk" firstAttribute="width" secondItem="Dnf-IE-ohD" secondAttribute="width" id="RRr-dj-5YX"/>
+                                    <constraint firstItem="fja-XK-Ouk" firstAttribute="leading" secondItem="Dnf-IE-ohD" secondAttribute="leading" id="bm5-oU-kEL"/>
+                                    <constraint firstItem="fja-XK-Ouk" firstAttribute="top" secondItem="Dnf-IE-ohD" secondAttribute="top" id="qIO-bD-vf0"/>
+                                    <constraint firstAttribute="bottom" secondItem="fja-XK-Ouk" secondAttribute="bottom" constant="87" id="vJ4-rs-ZPa"/>
+                                    <constraint firstAttribute="trailing" secondItem="fja-XK-Ouk" secondAttribute="trailing" id="xhN-JO-6qm"/>
                                 </constraints>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="Dnf-IE-ohD" secondAttribute="trailing" id="Igl-sk-ZFc"/>
-                            <constraint firstItem="Dnf-IE-ohD" firstAttribute="leading" secondItem="HW6-1H-8lu" secondAttribute="leading" id="djp-xP-yjT"/>
-                            <constraint firstItem="Dnf-IE-ohD" firstAttribute="top" secondItem="HW6-1H-8lu" secondAttribute="top" constant="66" id="ikf-Rq-M8N"/>
-                            <constraint firstItem="Cuu-56-Bft" firstAttribute="top" secondItem="Dnf-IE-ohD" secondAttribute="bottom" id="vq2-dX-4K3"/>
+                            <constraint firstAttribute="trailing" secondItem="Dnf-IE-ohD" secondAttribute="trailing" id="7lj-5Q-oLH"/>
+                            <constraint firstItem="Cuu-56-Bft" firstAttribute="top" secondItem="Dnf-IE-ohD" secondAttribute="bottom" id="CXm-US-7xM"/>
+                            <constraint firstItem="Dnf-IE-ohD" firstAttribute="top" secondItem="65O-Mi-gsM" secondAttribute="bottom" id="oZ8-a2-dWM"/>
+                            <constraint firstItem="Dnf-IE-ohD" firstAttribute="leading" secondItem="HW6-1H-8lu" secondAttribute="leading" id="p5W-hp-JpL"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="dWx-4J-YDP">
@@ -159,6 +171,14 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="contentView" destination="fja-XK-Ouk" id="NjY-w7-YQY"/>
+                        <outlet property="imageView" destination="mWL-7Q-1as" id="QMu-xL-10u"/>
+                        <outlet property="labelDescription" destination="dKk-iJ-zif" id="shx-dm-Ut0"/>
+                        <outlet property="labelReceiverName" destination="9eV-LI-DyD" id="n4T-hP-mAh"/>
+                        <outlet property="labelTitle" destination="VHv-l6-cKD" id="YR3-2b-0FY"/>
+                        <outlet property="scrollView" destination="Dnf-IE-ohD" id="AGA-VU-8cO"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oKC-lf-2lQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
