--- a/euajudo/View/CampaignCell.xib
+++ b/euajudo/View/CampaignCell.xib
@@ -13,24 +13,39 @@
                 <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uMB-as-vTO">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uMB-as-vTO">
                         <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PId-zn-O5g">
-                        <rect key="frame" x="17" y="250" width="267" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PId-zn-O5g">
+                        <rect key="frame" x="17" y="261" width="266" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="hPY-sD-B8d"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                        <color key="textColor" red="0.96862745100000003" green="0.96078431369999995" blue="0.95294117649999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ohq-ty-pvZ">
-                        <rect key="frame" x="17" y="222" width="267" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ohq-ty-pvZ">
+                        <rect key="frame" x="17" y="234" width="266" height="20"/>
+                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
+            <constraints>
+                <constraint firstItem="PId-zn-O5g" firstAttribute="top" secondItem="ohq-ty-pvZ" secondAttribute="bottom" constant="7" id="07M-JW-amF"/>
+                <constraint firstItem="PId-zn-O5g" firstAttribute="leading" secondItem="2jk-5e-4b1" secondAttribute="leading" constant="17" id="Dso-mx-k3W"/>
+                <constraint firstItem="uMB-as-vTO" firstAttribute="top" secondItem="2jk-5e-4b1" secondAttribute="top" id="HS2-Oh-sef"/>
+                <constraint firstItem="uMB-as-vTO" firstAttribute="leading" secondItem="2jk-5e-4b1" secondAttribute="leading" id="HTM-8E-Hz6"/>
+                <constraint firstItem="ohq-ty-pvZ" firstAttribute="leading" secondItem="2jk-5e-4b1" secondAttribute="leading" constant="17" id="MFa-Fv-wvx"/>
+                <constraint firstAttribute="bottom" secondItem="uMB-as-vTO" secondAttribute="bottom" id="ZA8-23-Idx"/>
+                <constraint firstAttribute="bottom" secondItem="PId-zn-O5g" secondAttribute="bottom" constant="18" id="dGR-lI-e44"/>
+                <constraint firstAttribute="trailing" secondItem="uMB-as-vTO" secondAttribute="trailing" id="hcd-uP-QnD"/>
+                <constraint firstAttribute="trailing" secondItem="ohq-ty-pvZ" secondAttribute="trailing" constant="17" id="kb6-0n-aHO"/>
+                <constraint firstAttribute="trailing" secondItem="PId-zn-O5g" secondAttribute="trailing" constant="17" id="oLr-Mo-CBU"/>
+            </constraints>
             <size key="customSize" width="256" height="236"/>
             <connections>
                 <outlet property="imageView" destination="uMB-as-vTO" id="Tvq-Ax-HWx"/>
